bk_ida/gccida/c1/do_jump
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_jump/src/expr.c:9732:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[BYTE2( v5)] == MODE_INT && !can_compare_p( NE, ( machine_mode)BYTE2( v5), ccp_jump) ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_jump/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_jump/src/expr.c:9732:73: error: use of undeclared identifier 'machine_mode'
else if ( mode_class_0[BYTE2( v5)] == MODE_INT && !can_compare_p( NE, ( machine_mode)BYTE2( v5), ccp_jump) ) 
                                                                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_jump/src/expr.c:9745:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v4 + 2), 
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_jump/src/obj/expr.o] Error 1
